--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 				<div class="halfCircleRight stepTwo">2</div>
 				<div class="stepMsg" style="width: 230px">
 					<span style="font-weight: bold">Click</span> timeline maps to view in main window.
+					<div class="feature-count"></div>
 				</div>
 
 				<div class="timelineLegendHeader">Historical Map Scales</div>
