--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
 <body class="nihilo">
 <div class="wrapper">
 	<!-- HEADER -->
-	<div class="header">
-		USGS Archival Topographic Map Explorer
-	</div>
+	<div class="header"></div>
 
 	<!-- CONTENT -->
 	<div class="contentliquid">
@@ -53,7 +51,7 @@
 					<div class="feature-count"></div>
 				</div>
 
-				<div class="timelineLegendHeader">Historical Map Scales</div>
+				<div class="timelineLegendHeader"></div>
 
 				<div class="btn-group btn-group-vertical topo-legend" data-toggle="buttons">
 					<label data-placement="right" class="btn toggle-scale five">
