--- a/index.html
+++ b/index.html
@@ -35,15 +35,21 @@
 <body class="nihilo">
 <div class="wrapper">
 	<!-- HEADER -->
-	<div class="header"></div>
+	<div class="headerContainer">
+		<div class="header"></div>
+		<div class="share">SHARE</div>
+	</div>
 
 	<!-- CONTENT -->
 	<div class="contentliquid">
 		<div class="content">
+			<!-- Map -->
 			<div id="map"></div>
+			<!-- Timeline -->
 			<div class="timelineContainer">
 				<div id="timeline"></div>
 			</div>
+			<!-- Timeline Legend -->
 			<div class="timelineLegendContainer">
 				<div class="halfCircleRight stepTwo">2</div>
 				<div class="stepMsg" style="width: 230px">
@@ -71,6 +77,7 @@
 					</label>
 				</div>
 			</div>
+			<!-- // END Timeline Legend -->
 		</div>
 	</div>
 
