--- a/index.html
+++ b/index.html
@@ -252,19 +252,19 @@
 
 			<div class="timeline-legend-header"></div>
 			<div class="btn-group btn-group-vertical topo-legend" data-toggle="buttons">
-				<label data-placement="right" class="btn toggle-scale five">
+				<label data-placement="right" class="btn toggle-scale five active">
 					<input type="checkbox" name="options"><span>250,000</span>
 				</label>
-				<label data-placement="right" class="btn toggle-scale four">
+				<label data-placement="right" class="btn toggle-scale four active">
 					<input type="checkbox" name="options"><span>125,000</span>
 				</label>
-				<label data-placement="right" class="btn toggle-scale three">
+				<label data-placement="right" class="btn toggle-scale three active">
 					<input type="checkbox" name="options"><span>63,360</span>
 				</label>
-				<label data-placement="right" class="btn toggle-scale two">
+				<label data-placement="right" class="btn toggle-scale two active">
 					<input type="checkbox" name="options"><span>24,000</span>
 				</label>
-				<label data-placement="right" class="btn toggle-scale one">
+				<label data-placement="right" class="btn toggle-scale one active">
 					<input type="checkbox" name="options"><span>12,000</span>
 				</label>
 			</div>
