--- a/index.html
+++ b/index.html
@@ -110,7 +110,6 @@
 	#timeline-container {
 		height: 310px;
 		margin-left: 270px;
-		padding: 3px;
 		overflow: hidden;
 	}
 
@@ -245,14 +244,10 @@
 	</div>
 
 	<!-- timeline container -->
-	<div id="timeline-container" data-dojo-type="dijit.layout.ContentPane"
-		 data-dojo-props="region:'bottom', splitter:true">
+	<div id="timeline-container" data-dojo-type="dijit.layout.ContentPane" data-dojo-props="region:'bottom', splitter:true">
 		<!-- timeline legend -->
 		<div class="timeline-legend-container">
-			<div class="message-container">
-				<!--<span style="font-weight: bold">Click</span> timeline maps to view in main window.-->
-			</div>
-
+			<div class="message-container"></div>
 			<div class="timeline-legend-header"></div>
 			<div class="btn-group btn-group-vertical topo-legend" data-toggle="buttons"></div>
 		</div>
