--- a/index.html
+++ b/index.html
@@ -200,9 +200,11 @@
 		opacity: 0.6;
 		float: left;
 		color: #FFF;
+		color: #FFF;
 		font-size: 3.0em;
 		padding-top: 5px;
 		padding-left: 5px;
+		margin-top: 5px;
 	}
 </style>
 
