--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 		overflow: hidden;
 	}
 
-	/* ------ main window ------ */
+		/* ------ main window ------ */
 	#main-window {
 		height: 100%;
 		width: 100%;
 	}
 
-	/* ------ header ------ */
+		/* ------ header ------ */
 	.header {
 		height: 70px;
 		margin: 0;
@@ -86,8 +86,7 @@
 		color: #FFF;
 	}
 
-
-	/* ------ side bar ------*/
+		/* ------ side bar ------*/
 	.sidebar {
 		height: 100% !important;
 		width: 270px;
@@ -95,8 +94,7 @@
 		overflow: hidden;
 	}
 
-
-	/* ------ map container ------ */
+		/* ------ map container ------ */
 	#map {
 		margin: 0;
 	}
@@ -105,15 +103,14 @@
 		opacity: 0.75 !important;
 	}
 
-
-	/* ------ timeline container ------*/
+		/* ------ timeline container ------*/
 	#timeline-container {
 		height: 310px;
 		margin-left: 270px;
 		overflow: hidden;
 	}
 
-	/* timeline legend */
+		/* timeline legend */
 	.timeline-legend-container {
 		float: left;
 		color: #666;
@@ -130,7 +127,7 @@
 		font-size: 0.85em !important;
 	}
 
-	/* timeline */
+		/* timeline */
 	#timeline {
 		margin-left: 200px;
 	}
@@ -156,8 +153,7 @@
 		width: 150px;
 	}
 
-
-	/* ------ geocoder ------  */
+		/* ------ geocoder ------  */
 	.esriSimpleSliderTL {
 		top: 10px !important;
 		left: 10px !important;
@@ -177,8 +173,7 @@
 		border: 1px solid #CFCFCF !important;
 	}
 
-
-	/* ------ MISC ------  */
+		/* ------ MISC ------  */
 	.dijitSplitter {
 		margin-left: 270px !important;
 	}
@@ -205,6 +200,13 @@
 		padding-top: 5px;
 		padding-left: 5px;
 		margin-top: 5px;
+	}
+
+	#loadingImg {
+		position: absolute;
+		left: 50%;
+		top: 50%;
+		z-index: 100;
 	}
 </style>
 
@@ -242,11 +244,12 @@
 
 	<!-- map -->
 	<div id="map" data-dojo-type="dijit.layout.ContentPane" data-dojo-props="region:'center', splitter:true">
-		<img id="loadingImg" src="images/loading.gif" style="position:absolute; right:512px; top:256px; z-index:100;"/>
+		<img id="loadingImg" src="images/loading2.gif"/>
 	</div>
 
 	<!-- timeline container -->
-	<div id="timeline-container" data-dojo-type="dijit.layout.ContentPane" data-dojo-props="region:'bottom', splitter:true">
+	<div id="timeline-container" data-dojo-type="dijit.layout.ContentPane"
+		 data-dojo-props="region:'bottom', splitter:true">
 		<!-- timeline legend -->
 		<div class="timeline-legend-container">
 			<div class="message-container"></div>
