--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <!--The viewport meta tag is used to improve the presentation and behavior of the samples
   on iOS devices-->
+<meta http-equiv="cache-control" content="public">
 <meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no">
 <title></title>
 
+<link rel="stylesheet" href="http://js.arcgis.com/3.9/js/dojo/dijit/themes/nihilo/nihilo.css"/>
+<link rel="stylesheet" href="http://js.arcgis.com/3.9/js/esri/css/esri.css"/>
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
 <link rel="stylesheet" type="text/css" href="css/tooltip.css"/>
@@ -17,8 +20,6 @@
 <link rel="stylesheet" type="text/css" href="css/timelineItem.css"/>
 <link rel="stylesheet" type="text/css" href="css/grid.css"/>
 <link rel="stylesheet" type="text/css" href="css/timelineLegend.css"/>
-<link rel="stylesheet" href="http://js.arcgis.com/3.9/js/dojo/dijit/themes/nihilo/nihilo.css"/>
-<link rel="stylesheet" href="http://js.arcgis.com/3.9/js/esri/css/esri.css"/>
 
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600,700' rel='stylesheet' type='text/css'>
 
@@ -26,10 +27,10 @@
 <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<script src="http://js.arcgis.com/3.9/"></script>
 <script src="js/tooltip-min.js"></script>
 <script src="js/config.js"></script>
 <script src="js/tmin.js"></script>
-<script src="http://js.arcgis.com/3.9/"></script>
 <script src="js/topoDataExploration.js"></script>
 
 <style>
