--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <!--The viewport meta tag is used to improve the presentation and behavior of the samples
   on iOS devices-->
-<meta http-equiv="cache-control" content="public">
+<meta http-equiv="Cache-Control:public, max-age=3600">
 <meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no">
 <title></title>
 
