--- a/index.html
+++ b/index.html
@@ -254,8 +254,7 @@ body {
 	<div class="sidebar" data-dojo-type="dijit.layout.ContentPane" data-dojo-props="region:'left'">
 		<div class="halfCircleRight stepOne">1</div>
 		<div class="message-container">
-			<span style="font-weight: bold">Go</span> to the location you want to explore, then <span
-				style="font-weight: bold">Click</span> timeline maps to view.
+			<span style="font-weight: bold">Zoom or Search</span> to a location to explore the map collection.
 		</div>
 		<div id="geocoder"></div>
 		<div class="gridContainer">
