--- a/index.html
+++ b/index.html
@@ -131,6 +131,11 @@ body {
 	/* font-weight: 500; */
 }
 
+#timelineMessage {
+	font-size: 0.8em;
+	color: rgb(148, 137, 137);
+}
+
 	/* timeline legend */
 .timeline-legend-container {
 	float: left;
@@ -282,6 +287,9 @@ body {
 			<div class="btn-group btn-group-vertical topo-legend" data-toggle="buttons"></div>
 		</div>
 		<div id="timelineDisableMessageContainer">Zoom closer on the map to enable the timeline</div>
+		<div id="timelineMessage">
+			<span style="font-weight: bold">Click</span> on a map title in the timeline to display the map.
+		</div>
 		<!-- timeline -->
 		<div id="timeline"></div>
 	</div>
