--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@ body {
 	height: 310px;
 	margin-left: 270px;
 	overflow: hidden;
+	background-color: rgb(247, 255, 247);
 }
 
 #timelineDisableMessageContainer {
