--- a/index.html
+++ b/index.html
@@ -1,301 +1,91 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<!--The viewport meta tag is used to improve the presentation and behavior of the samples
-  on iOS devices-->
-<meta http-equiv="Cache-Control:public, max-age=3600">
-<meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no">
-<title></title>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<meta http-equiv="Cache-Control:public, max-age=3600">
+		<meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no">
 
-<link rel="stylesheet" href="http://js.arcgis.com/3.9/js/dojo/dijit/themes/nihilo/nihilo.css"/>
-<link rel="stylesheet" href="http://js.arcgis.com/3.9/js/esri/css/esri.css"/>
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
-<link rel="stylesheet" type="text/css" href="css/tooltip.css"/>
-<link rel="stylesheet" type="text/css" href="css/themes/tooltipster-shadow.css"/>
-<link rel="stylesheet" type="text/css" href="css/slider.css"/>
-<!--<link rel="stylesheet" type="text/css" href="css/layout.css"/>-->
-<link rel="stylesheet" type="text/css" href="css/timeline.css"/>
-<link rel="stylesheet" type="text/css" href="css/timelineItem.css"/>
-<link rel="stylesheet" type="text/css" href="css/grid.css"/>
-<link rel="stylesheet" type="text/css" href="css/social.css"/>
-<link rel="stylesheet" type="text/css" href="css/timelineLegend.css"/>
+		<link rel="stylesheet" href="http://js.arcgis.com/3.9/js/dojo/dijit/themes/nihilo/nihilo.css"/>
+		<link rel="stylesheet" href="http://js.arcgis.com/3.9/js/esri/css/esri.css"/>
+		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
+		<link rel="stylesheet" type="text/css" href="css/tooltip.css"/>
+		<link rel="stylesheet" type="text/css" href="css/themes/tooltipster-shadow.css"/>
+		<link rel="stylesheet" type="text/css" href="css/slider.css"/>
+		<link rel="stylesheet" type="text/css" href="css/layout.css"/>
+		<link rel="stylesheet" type="text/css" href="css/timeline.css"/>
+		<link rel="stylesheet" type="text/css" href="css/timelineItem.css"/>
+		<link rel="stylesheet" type="text/css" href="css/grid.css"/>
+		<link rel="stylesheet" type="text/css" href="css/social.css"/>
+		<link rel="stylesheet" type="text/css" href="css/timelineLegend.css"/>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600,700' rel='stylesheet' type='text/css'>
 
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600,700' rel='stylesheet' type='text/css'>
+		<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+		<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+		<script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
+		<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+		<script src="http://js.arcgis.com/3.9/"></script>
+		<script src="js/tooltip-min.js"></script>
+		<script src="js/config.js"></script>
+		<script src="js/tmin.js"></script>
+		<script src="js/topoDataExploration.js"></script>
+	</head>
 
-<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-<script src="http://js.arcgis.com/3.9/"></script>
-<script src="js/tooltip-min.js"></script>
-<script src="js/config.js"></script>
-<script src="js/tmin.js"></script>
-<script src="js/topoDataExploration.js"></script>
+	<body class="nihilo">
+		<!-- main window -->
+		<div id="main-window" data-dojo-type="dijit.layout.BorderContainer" data-dojo-props="design:'headline', liveSplitters:true, gutters:false">
 
-<style>
-html, body {
-	height: 100%;
-	width: 100%;
-	margin: 0;
-	padding: 0;
-	font-family: 'Open Sans', sans-serif;
-	color: #666666;
-	font-size: 1.0em;
-}
+		<!-- header -->
+		<div class="header" data-dojo-type="dijit.layout.ContentPane" data-dojo-props="region:'top'">
+			<div class="header-title"></div>
+			<div class="subheader-title"></div>
 
-body {
-	overflow: hidden;
-}
+			<div id="social">
+				<i class="shareIcon share_facebook socialIcon-facebook-squared-1"></i>
+				<i class="socialIcon-twitter-1 shareIcon share_twitter"></i>
+				<i class="socialIcon-link shareIcon share_bitly" id="bitlyIcon" title="Get a short link to the application"></i>
 
-	/* ------ main window ------ */
-#main-window {
-	height: 100%;
-	width: 100%;
-}
-
-	/* ------ header ------ */
-.header {
-	height: 70px;
-	margin: 0;
-	background-color: rgb(8, 68, 0);
-	color: white;
-	overflow: hidden;
-}
-
-.header-title {
-	font-size: 1.6em;
-	padding-top: 10px;
-	padding-left: 10px;
-}
-
-.subheader-title {
-	font-size: 0.9em;
-	padding-left: 20px;
-}
-
-	/* ------ side bar ------*/
-.sidebar {
-	height: 100% !important;
-	width: 270px;
-	margin: 0;
-	overflow: hidden;
-}
-
-	/* ------ map container ------ */
-#map {
-	margin: 0;
-}
-
-.map .logo-med {
-	opacity: 0.75 !important;
-}
-
-	/* ------ timeline container ------*/
-#timeline-container {
-	height: 310px;
-	margin-left: 270px;
-	overflow: hidden;
-	background-color: rgb(242, 252, 242);
-}
-
-#timelineDisableMessageContainer {
-	display: none;
-	height: 310px;
-	right: 0;
-	left: 0;
-	overflow: hidden;
-	background-color: #7C7C7C;
-	position: absolute;
-	opacity: 0.65;
-	margin: auto;
-	color: white;
-	font-size: 1.7em;
-	text-align: center;
-	z-index: 300;
-	vertical-align: middle;
-	display: table-cell;
-	line-height: 200px;
-	/* font-weight: 500; */
-}
-
-#timelineMessage {
-	font-size: 0.9em;
-	color: rgb(148, 137, 137);
-}
-
-	/* timeline legend */
-.timeline-legend-container {
-	float: left;
-	color: #666;
-	width: 200px;
-}
-
-.timeline-legend-header {
-	font-size: 0.85em;
-	padding-bottom: 5px;
-	margin-left: 5px;
-}
-
-.timeline-legend-container > div.btn-group.btn-group-vertical.topo-legend > label > span {
-	font-size: 0.85em !important;
-}
-
-	/* timeline */
-#timeline {
-	margin-left: 200px;
-}
-
-.timeline-frame {
-	border: none !important;
-}
-
-.timeline-event-dot {
-	/*border-color: rgb(8, 68, 0) !important;*/
-}
-
-.timeline-event-selected {
-	border-color: #ff000a !important;
-}
-
-.timeline-navigation {
-	position: absolute;
-	/* right: 10px; */
-	top: 10px;
-	left: 10px;
-	opacity: 0.85;
-	width: 150px;
-}
-
-	/* ------ geocoder ------  */
-.esriSimpleSliderTL {
-	top: 10px !important;
-	left: 10px !important;
-}
-
-.simpleGeocoder .esriGeocoder {
-	border: 1px solid #CFCFCF !important;
-	margin-left: 20px;
-}
-
-.simpleGeocoder .esriGeocoderContainer {
-	width: 230px !important;
-}
-
-.simpleGeocoder .esriGeocoderResults {
-	margin-left: 20px;
-	border: 1px solid #CFCFCF !important;
-}
-
-	/* ------ MISC ------  */
-.dijitSplitter {
-	margin-left: 270px !important;
-}
-
-.message-container {
-	width: 65%;
-	padding: 1em;
-	margin: auto;
-	font-size: 0.85em;
-}
-
-.halfCircleRight {
-	height: 80px;
-	width: 40px;
-	border-radius: 0 80px 80px 0;
-	-moz-border-radius: 0 80px 80px 0;
-	-webkit-border-radius: 0 80px 80px 0;
-	background: #086B00;
-	opacity: 0.6;
-	float: left;
-	color: #FFF;
-	color: #FFF;
-	font-size: 3.0em;
-	padding-top: 5px;
-	padding-left: 5px;
-	margin-top: 5px;
-}
-
-#loadingImg {
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	z-index: 100;
-	opacity: 0.55;
-}
-
-.dijitSliderH {
-	/*opacity: 0.25;*/
-}
-</style>
-
-</head>
-
-<body class="nihilo">
-<!-- main window -->
-<div id="main-window" data-dojo-type="dijit.layout.BorderContainer"
-	 data-dojo-props="design:'headline', liveSplitters:true, gutters:false">
-
-	<!-- header -->
-	<div class="header" data-dojo-type="dijit.layout.ContentPane" data-dojo-props="region:'top'">
-		<div class="header-title"></div>
-		<div class="subheader-title"></div>
-
-		<div id="social">
-			<i class="shareIcon share_facebook socialIcon-facebook-squared-1"></i>
-			<i class="socialIcon-twitter-1 shareIcon share_twitter"></i>
-			<i class="socialIcon-link shareIcon share_bitly" id="bitlyIcon" title="Get a short link to the application"></i>
-
-			<div class="popover fade left in" style="display: none;">
-				<div class="arrow"></div>
-				<div class="popover-content" id="bitlyContent">
-					<div style="width:150px; height:30px">
-						<input id="bitlyInput" type="text" value="" style="width: 150px;">
+				<div class="popover fade left in" style="display: none;">
+					<div class="arrow"></div>
+					<div class="popover-content" id="bitlyContent">
+						<div style="width:150px; height:30px">
+							<input id="bitlyInput" type="text" value="" style="width: 150px;">
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 
-	<!-- sidebar -->
-	<div class="sidebar" data-dojo-type="dijit.layout.ContentPane" data-dojo-props="region:'left'">
-		<div class="halfCircleRight stepOne">1</div>
-		<div class="message-container">
-			<span style="font-weight: bold">Zoom or Search</span> to a location to explore the map collection.
-		</div>
-		<div id="geocoder"></div>
-		<div class="gridContainer">
-			<div class="halfCircleRight stepThree">2</div>
-			<div class="message-container">
-				<span style="font-weight: bold">Slide</span> transparency on map to compare, or drag/drop to
-				re-order maps.
+		<!-- sidebar container -->
+		<div class="sidebar" data-dojo-type="dijit.layout.ContentPane" data-dojo-props="region:'left'">
+			<div class="halfCircleRight stepOne step-one-half-circle-msg"></div>
+			<div class="message-container step-one-message"></div>
+			<div id="geocoder"></div>
+			<div class="gridContainer">
+				<div class="halfCircleRight stepThree step-two-half-circle-msg"></div>
+				<div class="message-container step-two-message"></div>
+				<div id="grid"></div>
 			</div>
-			<div id="grid"></div>
 		</div>
-	</div>
 
-	<!-- map -->
-	<div id="map" data-dojo-type="dijit.layout.ContentPane" data-dojo-props="region:'center', splitter:true">
-		<img id="loadingImg" src="images/loading2.gif"/>
-	</div>
+		<!-- map container -->
+		<div id="map" data-dojo-type="dijit.layout.ContentPane" data-dojo-props="region:'center', splitter:true">
+			<img id="loadingImg" src="images/loading2.gif"/>
+		</div>
 
-	<!-- timeline container -->
-	<div id="timeline-container" data-dojo-type="dijit.layout.ContentPane"
-		 data-dojo-props="region:'bottom', splitter:true">
-		<!-- timeline legend -->
-		<div class="timeline-legend-container">
-			<div class="message-container"></div>
-			<div class="timeline-legend-header"></div>
-			<div class="btn-group btn-group-vertical topo-legend" data-toggle="buttons"></div>
+		<!-- timeline container -->
+		<div id="timeline-container" data-dojo-type="dijit.layout.ContentPane" data-dojo-props="region:'bottom', splitter:true">
+			<!-- timeline legend -->
+			<div class="timeline-legend-container">
+				<div class="message-container"></div>
+				<div class="timeline-legend-header"></div>
+				<div class="btn-group btn-group-vertical topo-legend" data-toggle="buttons"></div>
+			</div>
+			<div class="timelineDisableMessageContainer"></div>
+			<div class="timelineMessage"></div>
+			<!-- timeline -->
+			<div id="timeline"></div>
 		</div>
-		<div id="timelineDisableMessageContainer">Zoom closer on the map to enable the timeline</div>
-		<div id="timelineMessage">
-			<span style="font-weight: bold">Click</span> on a map title in the timeline to display the map.
-		</div>
-		<!-- timeline -->
-		<div id="timeline"></div>
 	</div>
-</div>
 </body>
 </html>
