UI style updates and file deletions

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 				<div class="btn-group btn-group-vertical topo-legend" data-toggle="buttons"></div>
 			</div>
 			<div class="timelineDisableMessageContainer"></div>
-			<div class="timelineMessage"></div>
+			<div class="timeline-message"></div>
 			<!-- timeline -->
 			<div id="timeline"></div>
 		</div>
