--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 		<link rel="stylesheet" type="text/css" href="css/tooltip.css"/>
 		<link rel="stylesheet" type="text/css" href="css/themes/tooltipster-shadow.css"/>
 		<link rel="stylesheet" type="text/css" href="css/slider.css"/>
-		<!--<link rel="stylesheet" type="text/css" href="css/layout.css"/>-->
 		<link rel="stylesheet" type="text/css" href="css/timeline.css"/>
 		<link rel="stylesheet" type="text/css" href="css/timelineItem.css"/>
 		<link rel="stylesheet" type="text/css" href="css/grid.css"/>
@@ -42,6 +41,12 @@
 		<div id="main-window" data-dojo-type="dijit.layout.BorderContainer" data-dojo-props="design:'headline', liveSplitters:true, gutters:false">
 			<!-- header -->
 			<div class="header" data-dojo-type="dijit.layout.ContentPane" data-dojo-props="region:'top'">
+				<a href="" target="_blank">
+					<img id="esri-logo" class="header-logo">
+				</a>
+				<a href="" target="_blank">
+					<img id="non-esri-logo" class="header-logo">
+				</a>
 				<div class="header-title"></div>
 				<div class="subheader-title"></div>
 
@@ -53,7 +58,7 @@
 					<div class="popover fade left in" data-toggle="popover" data-placement="left" style="display: none;">
 						<div class="arrow"></div>
 						<div class="popover-content" id="bitlyContent">
-							<div style="width:150px; height:30px">
+							<div class="bitlyInputContainer">
 								<input id="bitlyInput" type="text" value="" style="width: 150px;">
 							</div>
 						</div>
