--- a/application_boilerplate/index.html
+++ b/application_boilerplate/index.html
@@ -42,6 +42,12 @@
 		<div id="main-window" data-dojo-type="dijit.layout.BorderContainer" data-dojo-props="design:'headline', liveSplitters:true, gutters:false">
 			<!-- header -->
 			<div class="header" data-dojo-type="dijit.layout.ContentPane" data-dojo-props="region:'top'">
+				<a href="" target="_blank">
+					<img id="esri-logo" class="header-logo">
+				</a>
+				<a href="" target="_blank">
+					<img id="non-esri-logo" class="header-logo">
+				</a>
 				<div class="header-title"></div>
 				<div class="subheader-title"></div>
 
@@ -50,11 +56,11 @@
 					<i class="socialIcon-twitter-1 shareIcon share_twitter"></i>
 					<i class="socialIcon-link shareIcon share_bitly" id="bitlyIcon" title="Get a short link to the application"></i>
 
-					<div class="popover fade left in" data-toggle="popover" data-placement="left" style="display: none;">
+					<div class="popover fade left in" data-toggle="popover" data-placement="left">
 						<div class="arrow"></div>
 						<div class="popover-content" id="bitlyContent">
-							<div style="width:150px; height:30px">
-								<input id="bitlyInput" type="text" value="" style="width: 150px;">
+							<div class="bitlyInputContainer">
+								<input id="bitlyInput" type="text" value="">
 							</div>
 						</div>
 					</div>
