--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
 			<!-- sidebar container -->
 			<div class="sidebar" data-dojo-type="dijit.layout.ContentPane" data-dojo-props="region:'left'">
 				<!-- STEP ONE -->
-				<div class="halfCircleRight stepOne step-one-half-circle-msg"></div>
+				<div class="halfCircleRight step-one step-one-half-circle-msg"></div>
 				<div class="message-container step-one-message"></div>
 				<div id="geocoder"></div>
 				<!-- STEP TWO -->
-				<div class="halfCircleRight stepTwo step-two-half-circle-msg"></div>
+				<div class="halfCircleRight step-two step-two-half-circle-msg"></div>
 				<div class="message-container step-two-message"></div>
 				<!-- GRID CONTAINER / STEP THREE / GRID -->
 				<div class="gridContainer">
-					<div class="halfCircleRight stepThree step-three-half-circle-msg"></div>
+					<div class="halfCircleRight step-three step-three-half-circle-msg"></div>
 					<div class="message-container step-three-message"></div>
 					<div id="grid"></div>
 				</div>
